[package]
name = "etch"
version = "0.1.0"
edition = "2024"
authors = ["Rust Wizard"]
description = "Text-to-image generation with Candle"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda  = ["candle-core/cuda",  "candle-nn/cuda",  "candle-transformers/cuda"]

[dependencies]
candle-core = { version = "0.10" }
candle-nn = { version = "0.10" }
candle-transformers = { version = "0.10" }
hf-hub = { version = "0.4", features = ["tokio"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
anyhow = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
tracing = "0.1"
tokenizers = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
